# almacen_fp

./: .env.example  .gitignore  README.md  mqtt-listener.service  pyproject.toml
almacen/: admin.py  apps.py  context_processors.py  decorators.py  forms.py  htmx.py  models.py  signals.py  tables.py  urls.py  views.py
almacen/management/commands/: add_profes.py  mqtt_listener.py
almacen/migrations/: 0001_initial.py  0002_crear_grupo_profesores.py  0002_profesores_group.py  0003_ultima_aula_persona.py  0004_persona_epc.py  0005_alter_prestamo_usuario.py  0006_add_aulas_access_to_persona.py  0007_aula_operation_mode.py
almacen/templates/almacen/: _epc_input.partial.html  _messages.partial.html  _product_row.partial.html  aulas.html  dashboard.html  inventory.html  persona_assign_epc.html  prestamos_overview.html  producto_create.html
almacen/templates/store/: _product_row.html  checkouts.html  dashboard.html  inventory.html  locations.html  product_form.html
almacen/templatetags/: group_tags.py
almacen/tests/: test_mqtt_batch.py
core/: settings.py  urls.py
documentacion/: Manual de Usuario.md
documentacion/website/: index.html  script.js  styles.css
hardware/almacen/: CallBack.ino  Envio_datos.ino  R200.cpp  almacen.ino  bufferRepetidos.ino  conexionMQTT.ino  credenciales.h  credenciales.h.ejemplo  opciones.h  setup_wifi.ino
hardware/archivos_impresora_3D/: Caja Pantalla.3mf  Sensor Almacen.3mf
hardware/pantalla/: README.md  configs.py.ejemplo  main.py
hardware/pantalla/uploader/: exclude.lst  upload.sh  upload_file.sh
inventario/inventario/: settings.py
mosquitto/: aclfile  instalar.sh  rfid.conf
requirements/: requirements.in  requirements.txt
servidor/: README.md  almacen-uwsgi.service  almacen.conf  almacen_uwsgi.ini  mqtt-rfid.service  setup_mqtt_logging.sh  uwsgi.ini
static/css/: custom.css
templates/: _messages.html  _navbar.partial.html  base.html
templates/account/: login.html  logout.html  password_reset.html
tests/: test_access_control_simple.py  test_dashboard_view.py  test_mqtt_listener.py  test_mqtt_simple.py
theme/static_src/: tailwind.config.js
theme/templatetags/: theme_tags.py
