[project]
name = "almacen_fp"
version = "0.1.0"
description = "Gestión de almacén mediante RFID para talleres de FP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Django>=5.1,<6.0",
  "django-allauth>=65.0",
  "python-dotenv>=1.0",
  "django-htmx>=1.18.0",
  "Pillow>=10.4",
  "whitenoise>=6.7",
  "django-template-partials>=24.4",
  "requests>=2.32.5",
  "jwt>=1.4.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "debugpy>=1.8.17",
    "django-stubs>=5.2.5",
    "django-types>=0.22.0",
    "mypy>=1.18.2",
    "pip-tools>=7.5.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
]

[project.scripts]
manage = "django.core.management:execute_from_command_line"

[tool.black]
line-length = 88
